# Tiberius

./: .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  pyproject.toml  pytest.ini  tiberius.py
.github/workflows/: test.yml
conf/: README.md  base.config  greifswald_hpc.config  local.config  parameters.yaml  slurm_generic.config  user_hpc_template.config
docs/: README_old.md  clamsa_data.md  config.json  developer_guide.md  install_tensorflow.md  singularity_image.md  softmasking_workflow.md  training_large_data.md
model_cfg/: README.md  angiosperms.yaml  basidiomycota.yaml  chlorophyta.yaml  diatoms.yaml  diatoms_unmasked.yaml  eudicotyledons.yaml  fungi.yaml  fungi_incertae_sedis.yaml  insecta.yaml  insecta_unmasked.yaml  insecta_unmasked_v2.yaml  lepidoptera.yaml  mammalia_clamsa_v2.yaml  mammalia_nosofttmasking_v2.yaml  mammalia_softmasking_v2.yaml  monocotyledonae.yaml  mucoromycota.yaml  saccharomycota.yaml  vertebrates.yaml
model_cfg/benchmark/: README.md
model_cfg/superseded/: angiosperms_softmasking.yaml  basidiomycota.yaml  fungi_incertae_sedis.yaml  insecta_softmasking.yaml  insecta_unmasked.yaml  lepidoptera.yaml  monocotyledonae.yaml  mucoromycota.yaml  saccharomycota.yaml  sordariomycota.yaml
notebooks/: window_loss_test.ipynb
project/: annotate.py  create_tfrecords.py  model.json  residual.json  train.py
test/: unit_tests.py
test_data/: test_vit.py  val_model.py
test_data/Panthera_pardus/: README.md  example_prediction.ipynb  example_train_full.ipynb  (+1 more)
tiberius/: __init__.py  _version.py  annotate.py  annotation_gtf.py  check_tfrec_size.py  config.json  config_LRU.json  config_LSTM.json  config_utils.py  data_generator.py  data_generator_h5.py  download_models.py  eval_model_class.py  evidence_pipeline_wrapper.py  filter_gtf.py  gene_pred_hmm.py  gene_pred_hmm_emitter.py  gene_pred_hmm_transitioner.py  genome_anno.py  genome_fasta.py  hints.py  hmm.py  kmer.py  main.nf  main.py  models.py  parse_args.py  reformat_gtf.py  select_single_isoform.py  start_training.py  tiberius_args.py  track_gpu_callback.py  train.py  util.py  validation_from_tfrecords.py  validation_loss.py  wig2np.py  wig_class.py  write_tfrecord_species.py
(+81 files in other folders)
